docs: :memo: Minor updates, tips, and link fixes

--- a/docs/src/pages/guide/documents.mdx
+++ b/docs/src/pages/guide/documents.mdx
@@ -76,7 +76,7 @@ post.meta // PageMeta
 post.frontmatter // PageFrontmatter
 ```
 
-## Ref Sugar (experimental in Vue)
+## Ref value
 
 Since <kbd>useDocuments</kbd> returns a `Ref`, when accessing documents in a script you would do:
 
