--- a/docs/src/pages/guide/index.mdx
+++ b/docs/src/pages/guide/index.mdx
@@ -67,9 +67,7 @@ Add the iles executable to the `scripts` section of your `package.json` if it's 
 
 From your terminal or integrated terminal of your editor (Visual Studio Code),
 
-- <kbd>iles dev</kbd>: Starts the development server
-- <kbd>iles build</kbd>: Creates a production build of the site
-- <kbd>iles preview</kbd>: Preview the site after building
+### Install your dependencies:
 
 ```bash
 npm install # or pnpm, yarn, bun
