--- a/docs/src/pages/guide/pwa.mdx
+++ b/docs/src/pages/guide/pwa.mdx
@@ -21,7 +21,7 @@ import pwa from '@islands/pwa'
 
 export default defineConfig({
   modules: [
-    pwa(options),
+    pwa(/* options */),
   ],
 })
 ```
