docs: :memo: Added `vue` & `autoImport` to Iles config page, and other minor updates

--- a/docs/src/pages/guide/introduction.mdx
+++ b/docs/src/pages/guide/introduction.mdx
@@ -17,7 +17,7 @@ tocLevel: 3
 [hydration strategies]: /guide/islands#hydration-strategies
 [markdown]: /guide/markdown
 [pages]: /guide/project-structure#pages
-[layouts]: /guide/project-structure#components
+[layouts]: /guide/project-structure#layouts
 [components]: /guide/project-structure#components
 [Demo]: https://the-vue-point-with-iles.netlify.app/
 [devtools1]: https://user-images.githubusercontent.com/1158253/133314267-f0ba784c-ff64-4ee8-b2bf-97ecffc2facd.jpg
