--- a/docs/src/pages/guide/modules.mdx
+++ b/docs/src/pages/guide/modules.mdx
@@ -12,7 +12,7 @@ tocLevel: 3
 [pwa]: /guide/pwa
 [@userquin]: https://twitter.com/userquin
 
-[@vitejs/plugin-vue]: https://www.npmjs.com/package/@vitejs/plugin-vue
+[@vitejs/plugin-vue]: https://github.com/vitejs/vite-plugin-vue/tree/main/packages/plugin-vue
 [unplugin-vue-components]: https://github.com/unplugin/unplugin-vue-components
 [unplugin-auto-import]: https://github.com/unplugin/unplugin-auto-import
 [MDX]: https://github.com/mdx-js/mdx
@@ -101,7 +101,7 @@ that work similarly to [those in Vite](https://vitejs.dev/guide/api-plugin.html#
 You can start your own module package by running:
 
 ```bash
-pnpm create iles-module@next # or npm or yarn
+npm create iles-module@latest # or pnpm, yarn, bun
 ```
 
 Module packages should be `"type": "module"` and have a default ESM export,
@@ -328,7 +328,7 @@ import { defineConfig } from 'iles'
 
 export default defineConfig({
   vue: {
-    reactivityTransform: true,
+    // options
   },
 })
 ```
