--- a/docs/src/pages/config/index.mdx
+++ b/docs/src/pages/config/index.mdx
@@ -21,6 +21,10 @@ sidebar: auto
 [vue-router]: https://next.router.vuejs.org/
 [@unhead/vue]: https://unhead.unjs.io/setup/vue/installation
 
+[@vitejs/plugin-vue]: https://github.com/vitejs/vite-plugin-vue/tree/main/packages/plugin-vue#options
+[unplugin-vue-components]: https://github.com/unplugin/unplugin-vue-components#configuration
+[unplugin-auto-import]: https://github.com/unplugin/unplugin-auto-import#configuration
+
 # Configuration
 
 The following section is an overview of basic configuration for <Iles/>.
@@ -77,6 +81,96 @@ By default drafts will be displayed during development, but will be excluded whe
 - **Type:** `IlesModuleOption[]`
 
 <Iles/> modules to apply in the site. Read the [_Modules and Plugins_][modules] guide.
+
+### `vue`
+
+- **Type:** `object`
+- **Default:** 
+
+```ts
+vue: {
+  template: {
+    compilerOptions: {},
+  },
+}
+```
+
+Provides support for Single File Components with Vue 3.
+
+To customize, refer to [@vitejs/plugin-vue].
+
+### `autoImport`
+
+- **Type:** `object`
+- **Default:** 
+
+```ts
+autoImport: {
+  dts: true,
+  include: [
+    /\.[tj]sx?$/, // .ts, .tsx, .js, .jsx
+    /\.vue$/,
+    /\.vue\?vue/, // .vue
+    /\.md$/, // .md
+    /\.mdx$/, // .mdx
+    /\.svelte$/, // .svelte
+  ],
+  imports: [
+    'vue',
+    // 'vue-i18n',
+    // 'vue/macros',
+    unheadVueComposablesImports,
+    // '@vueuse/core',
+    // 'pinia',
+    {
+      iles: [
+        'usePage',
+        'useRoute',
+        'definePageComponent',
+        'useDocuments',
+      ],
+    }
+  ],
+  dirs: [
+    // 'src/hooks',
+    'src/composables', // only root modules
+    // 'src/composables/**', // all nested modules
+    // 'src/utils',
+    // 'src/stores',
+  ],
+  vueTemplate: true,
+  resolvers: [
+    /* ... */
+  ],
+}
+```
+
+Enables auto-importing APIs on-demand, and is leveraged internally to support automatic import of APIs and composables from `vue`, `@unhead/vue` and from the users's `src/composables` folder. 
+
+To customize, refer to [unplugin-auto-import].
+
+### `components`
+
+- **Type:** `object`
+- **Default:** 
+
+```ts
+components: {
+  dts: true,
+  extensions: ['vue', 'jsx', 'tsx', 'js', 'ts', 'mdx', 'svelte'],
+  include: [/\.vue$/, /\.vue\?vue/, /\.mdx?/],
+  dirs: `${srcDir}/components`,
+  resolvers: [
+    IlesComponentResolver,
+    IlesLayoutResolver(appConfig),
+  ],
+  transformer: 'vue3',
+}
+```
+
+Enables auto-importing Vue components, and is leveraged internally to support automatic component resolution in MDX files. 
+
+To customize, refer to [unplugin-vue-components].
 
 ### `turbo` (experimental)
 
