--- a/docs/src/pages/guide/index.mdx
+++ b/docs/src/pages/guide/index.mdx
@@ -22,7 +22,7 @@ import stackblitzSrc from '/images/stackblitz.svg'
 Run the following command to create a new îles project using the [starter] template. Then, follow the [usage](#usage) section.
 
 ```bash
-pnpm create iles@next # or npm or yarn
+npm create -D iles@latest # or pnpm, yarn, bun
 ```
 
 ## Add îles to an Existing Project 💙 
