Forked as nuraui

--- a/docs/src/components/contact.mdx
+++ b/docs/src/components/contact.mdx
@@ -1,8 +1,8 @@
-[twitter]: https://twitter.com/ilesjs
-[follow me]:  https://twitter.com/MaximoMussini
-[GitHub Issues]: https://github.com/ElMassimo/iles/issues
-[GitHub Discussions]: https://github.com/ElMassimo/iles/discussions
-[project]: https://github.com/ElMassimo/iles
+[twitter]: https://twitter.com/nuraui
+[follow me]:  https://twitter.com/techakayy
+[GitHub Issues]: https://github.com/nuraui/nurajs/issues
+[GitHub Discussions]: https://github.com/nuraui/nurajs/discussions
+[project]: https://github.com/nuraui/nurajs
 
 ## Contact ✉️
 
