--- a/docs/src/pages/config/index.mdx
+++ b/docs/src/pages/config/index.mdx
@@ -60,7 +60,7 @@ You can leverage your IDE's intellisense by using the `defineConfig` helper:
 import { defineConfig } from 'iles'
 
 export default defineConfig({
-  siteUrl: 'https://iles-docs.netlify.app',
+  siteUrl: 'https://nuraui.com',
   jsx: 'preact',
 })
 ```
@@ -260,7 +260,7 @@ import { defineConfig } from 'iles'
 import UnoCSS from 'unocss/vite'
 
 export default defineConfig({
-  siteUrl: 'https://iles-docs.netlify.app',
+  siteUrl: 'https://nuraui.com',
   extendFrontmatter (frontmatter, filename) {
     if (filename.includes('/posts/'))
       frontmatter.layout = 'post'
