--- a/docs/src/pages/guide/introduction.mdx
+++ b/docs/src/pages/guide/introduction.mdx
@@ -2,7 +2,7 @@
 tocLevel: 3
 ---
 
-[îles]: https://github.com/ElMassimo/iles
+[îles]: https://github.com/nuraui/nurajs
 [Vite.js]: https://vitejs.dev/
 [Vue]: https://v3.vuejs.org/
 [MDX]: https://github.com/mdx-js/mdx
@@ -19,12 +19,12 @@ tocLevel: 3
 [pages]: /guide/project-structure#pages
 [layouts]: /guide/project-structure#layouts
 [components]: /guide/project-structure#components
-[Demo]: https://the-vue-point-with-iles.netlify.app/
+[Demo]: https://the-vue-point-with-nuraui.com/
 [devtools1]: https://user-images.githubusercontent.com/1158253/133314267-f0ba784c-ff64-4ee8-b2bf-97ecffc2facd.jpg
 [devtools2]: https://user-images.githubusercontent.com/1158253/133314279-1edc22d1-3ffb-414e-b994-212cb316593b.jpg
 
-[docs repo]: https://github.com/ElMassimo/iles/tree/main/docs
-[blog repo]: https://github.com/ElMassimo/iles/blob/main/playground/the-vue-point
+[docs repo]: https://github.com/nuraui/nurajs/tree/main/docs
+[blog repo]: https://github.com/nuraui/nurajs/blob/main/playground/the-vue-point
 
 # Introduction
 
