--- a/docs/src/pages/guide/islands.mdx
+++ b/docs/src/pages/guide/islands.mdx
@@ -8,8 +8,8 @@
 [SolidJS]: /guide/modules#vite-plugin-solid
 [Svelte]: /guide/modules#sveltejsvite-plugin-svelte
 [Suspense]: https://vuejs.org/guide/built-ins/suspense
-[Demo]: https://the-vue-point-with-iles.netlify.app/cat-zone
-[blog repo]: https://github.com/ElMassimo/iles/blob/main/playground/the-vue-point/src/components/CatDisplay.vue
+[Demo]: https://the-vue-point-with-nuraui.com/cat-zone
+[blog repo]: https://github.com/nuraui/nurajs/blob/main/playground/the-vue-point/src/components/CatDisplay.vue
 
 [strategies]: /guide/islands#clientload
 [strategy]: /guide/islands#clientload
@@ -138,7 +138,7 @@ Sometimes you need client-side code that does not map to a component. Alternativ
 
 ```vue
 <script client:load lang="ts">
-console.log('Powered by îles 🏝', 'https://iles-docs.netlify.app')
+console.log('Powered by îles 🏝', 'https://nuraui.com')
 </script>
 ```
 
