--- a/docs/src/pages/guide/modules.mdx
+++ b/docs/src/pages/guide/modules.mdx
@@ -32,15 +32,15 @@ tocLevel: 3
 [vite-plugin-pwa]: https://github.com/antfu/vite-plugin-pwa
 
 [prismjs]: https://prismjs.com/
-[@islands/excerpt]: https://github.com/ElMassimo/iles/tree/main/packages/excerpt
-[@islands/headings]: https://github.com/ElMassimo/iles/tree/main/packages/headings
-[@islands/icons]: https://github.com/ElMassimo/iles/tree/main/packages/icons
-[@islands/images]: https://github.com/ElMassimo/iles/tree/main/packages/images
-[@islands/mdx]: https://github.com/ElMassimo/iles/tree/main/packages/mdx
-[@islands/pages]: https://github.com/ElMassimo/iles/tree/main/packages/pages
-[@islands/prism]: https://github.com/ElMassimo/iles/tree/main/packages/prism
-[@islands/feed]: https://github.com/ElMassimo/iles/tree/main/packages/feed
-[@islands/pwa]: https://github.com/ElMassimo/iles/tree/main/packages/pwa
+[@islands/excerpt]: https://github.com/nuraui/nurajs/tree/main/packages/excerpt
+[@islands/headings]: https://github.com/nuraui/nurajs/tree/main/packages/headings
+[@islands/icons]: https://github.com/nuraui/nurajs/tree/main/packages/icons
+[@islands/images]: https://github.com/nuraui/nurajs/tree/main/packages/images
+[@islands/mdx]: https://github.com/nuraui/nurajs/tree/main/packages/mdx
+[@islands/pages]: https://github.com/nuraui/nurajs/tree/main/packages/pages
+[@islands/prism]: https://github.com/nuraui/nurajs/tree/main/packages/prism
+[@islands/feed]: https://github.com/nuraui/nurajs/tree/main/packages/feed
+[@islands/pwa]: https://github.com/nuraui/nurajs/tree/main/packages/pwa
 
 [feed]: https://github.com/jpmonette/feed
 
@@ -50,7 +50,7 @@ tocLevel: 3
 
 [alias]: /guide/project-structure#default-app-structure
 [vite-plugin-image-presets]: https://github.com/ElMassimo/vite-plugin-image-presets
-[the-vue-point]: https://the-vue-point-with-iles.netlify.app/
+[the-vue-point]: https://the-vue-point-with-nuraui.com/
 
 # Modules and Plugins 🔌
 
