--- a/docs/src/pages/guide/project-structure.mdx
+++ b/docs/src/pages/guide/project-structure.mdx
@@ -11,11 +11,11 @@
 [useDocuments]: /guide/documents
 [frameworks]: /guide/frameworks
 [head and meta]: /guide/head-and-meta
-[discussion]: https://github.com/ElMassimo/iles/discussions/6#discussioncomment-1479755
+[discussion]: https://github.com/nuraui/nurajs/discussions/6#discussioncomment-1479755
 [`@unhead/vue`]: https://unhead.unjs.io/setup/vue/installation
 [shortcodes]: /guide/markdown#advanced-provide-components-shortcodes
 [vue-router]: https://next.router.vuejs.org/
-[discussion]: https://github.com/ElMassimo/iles/discussions/6#discussioncomment-1479755
+[discussion]: https://github.com/nuraui/nurajs/discussions/6#discussioncomment-1479755
 [unplugin-auto-import]: https://github.com/unplugin/unplugin-auto-import#configuration
 [unplugin-vue-components]: https://github.com/unplugin/unplugin-vue-components#configuration
 [autoImport key]: /guide/modules#unplugin-auto-import
@@ -428,7 +428,7 @@ If configured, `siteUrl` will also make it available as `site.url` and `site.can
 import { defineConfig } from 'iles'
 
 export default defineConfig({
-  siteUrl: 'https://iles-docs.netlify.app',
+  siteUrl: 'https://nuraui.com',
 })
 ```
  
