--- a/docs/src/pages/guide/routing.mdx
+++ b/docs/src/pages/guide/routing.mdx
@@ -3,9 +3,9 @@
 [frontmatter]: /guide/markdown#frontmatter-and-meta
 [Vue Router]: https://next.router.vuejs.org/
 [getStaticPaths]: #generating-dynamic-routes
-[pagination demo in a blog]: https://the-vue-point-with-iles.netlify.app/posts/1
-[pagination source]: https://github.com/ElMassimo/iles/blob/main/playground/the-vue-point/src/pages/posts/%5Bpage%5D.vue
-[dynamic source]: https://github.com/ElMassimo/iles/blob/main/docs/src/pages/dynamic/%5Bsection%5D.vue
+[pagination demo in a blog]: https://the-vue-point-with-nuraui.com/posts/1
+[pagination source]: https://github.com/nuraui/nurajs/blob/main/playground/the-vue-point/src/pages/posts/%5Bpage%5D.vue
+[dynamic source]: https://github.com/nuraui/nurajs/blob/main/docs/src/pages/dynamic/%5Bsection%5D.vue
 [dynamic parameters]: #dynamic-routes
 
 [@islands/pages]: /guide/modules#islandspages
@@ -13,8 +13,8 @@
 [prettyUrls]: /config#prettyurls
 
 [cms]: https://directus.io
-[directus]: https://github.com/ElMassimo/iles-directus-example/tree/main/iles
-[obtains articles]: https://github.com/ElMassimo/iles-directus-example/blob/main/iles/src/pages/articles/%5Bid%5D.vue#L5-L15
+[directus]: https://github.com/nuraui/nurajs-directus-example/tree/main/iles
+[obtains articles]: https://github.com/nuraui/nurajs-directus-example/blob/main/iles/src/pages/articles/%5Bid%5D.vue#L5-L15
 
 # Routing 🛣
 
